Update travis.yml deploy with pelican

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
+language: python
+python:
+  - "3.5"
+sudo: false
 branches:
   only:
   - master
+install:
+  - pip install --upgrade pip
+  - pip install -r requirements.txt
+script:
+  - make publish
 deploy:
     provider: s3
     access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
