--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,6 @@
-language: python
-python:
-  - "3.5"
-sudo: false
-branches:
-  only:
-  - master
-install:
-  - pip install --upgrade pip
-  - pip install -r requirements.txt
-script:
-  - make publish
+language: node_js
+node_js:
+  - node
 deploy:
     provider: s3
     access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
